// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`numberInput > should click on plus button with a step value and an in-between value set 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div>
        <div
          class="styles__ai2awpk styles_size_large__ai2awpl styles_state_default__ai2awpo"
          data-controls="true"
          data-disabled="false"
          data-error="false"
          data-size="large"
          data-success="false"
          data-unit="false"
        >
          <div
            class="styles_large__ai2awp0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="large"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                minus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__ai2awp3 styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_justifyContent_space-between_xxsmall__1w3vbem61"
            style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
          >
            <input
              class="styles__ai2awpc styles_controls_true__ai2awpe styles_size_large__ai2awpg"
              id="_r_5a_"
              inputmode="numeric"
              max="100"
              min="0"
              placeholder=""
              step="10"
              type="number"
            />
          </div>
          <div
            class="styles_large__ai2awp0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="large"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                plus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div>
        <div
          class="styles__ai2awpk styles_size_large__ai2awpl styles_state_default__ai2awpo"
          data-controls="true"
          data-disabled="false"
          data-error="false"
          data-size="large"
          data-success="false"
          data-unit="false"
        >
          <div
            class="styles_large__ai2awp0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="large"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                minus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__ai2awp3 styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_justifyContent_space-between_xxsmall__1w3vbem61"
            style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
          >
            <input
              class="styles__ai2awpc styles_controls_true__ai2awpe styles_size_large__ai2awpg"
              id="_r_0_"
              inputmode="decimal"
              max="100"
              min="0"
              placeholder=""
              type="number"
            />
          </div>
          <div
            class="styles_large__ai2awp0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="large"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                plus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should renders correctly all sizes > with size large 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div>
        <div
          class="styles__ai2awpk styles_size_large__ai2awpl styles_state_default__ai2awpo"
          data-controls="true"
          data-disabled="false"
          data-error="false"
          data-size="large"
          data-success="false"
          data-unit="false"
        >
          <div
            class="styles_large__ai2awp0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="large"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                minus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__ai2awp3 styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_justifyContent_space-between_xxsmall__1w3vbem61"
            style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
          >
            <input
              class="styles__ai2awpc styles_controls_true__ai2awpe styles_size_large__ai2awpg"
              id="_r_2k_"
              inputmode="decimal"
              max="100"
              min="0"
              placeholder=""
              type="number"
            />
          </div>
          <div
            class="styles_large__ai2awp0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="large"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                plus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should renders correctly all sizes > with size large and unit 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div>
        <div
          class="styles__ai2awpk styles_size_large__ai2awpl styles_state_default__ai2awpo"
          data-controls="true"
          data-disabled="false"
          data-error="false"
          data-size="large"
          data-success="false"
          data-unit="true"
        >
          <div
            class="styles_large__ai2awp0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="large"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                minus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__ai2awp3 styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_justifyContent_space-between_xxsmall__1w3vbem61"
            style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
          >
            <input
              class="styles__ai2awpc styles_controls_true__ai2awpe styles_hasUnit_true__ai2awpf styles_size_large__ai2awpg"
              id="_r_3c_"
              inputmode="decimal"
              max="100"
              min="0"
              placeholder=""
              type="number"
            />
            <span
              class="styles__ai2awp5 styles_size_large__ai2awp8 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
            >
              GB
            </span>
          </div>
          <div
            class="styles_large__ai2awp0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="large"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                plus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should renders correctly all sizes > with size medium 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div>
        <div
          class="styles__ai2awpk styles_size_medium__ai2awpm styles_state_default__ai2awpo"
          data-controls="true"
          data-disabled="false"
          data-error="false"
          data-size="medium"
          data-success="false"
          data-unit="false"
        >
          <div
            class="styles_medium__ai2awp1 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="medium"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                minus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__ai2awp3 styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_justifyContent_space-between_xxsmall__1w3vbem61"
            style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
          >
            <input
              class="styles__ai2awpc styles_controls_true__ai2awpe styles_size_medium__ai2awph"
              id="_r_2s_"
              inputmode="decimal"
              max="100"
              min="0"
              placeholder=""
              type="number"
            />
          </div>
          <div
            class="styles_medium__ai2awp1 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="medium"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                plus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should renders correctly all sizes > with size medium and unit 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div>
        <div
          class="styles__ai2awpk styles_size_medium__ai2awpm styles_state_default__ai2awpo"
          data-controls="true"
          data-disabled="false"
          data-error="false"
          data-size="medium"
          data-success="false"
          data-unit="true"
        >
          <div
            class="styles_medium__ai2awp1 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="medium"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                minus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__ai2awp3 styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_justifyContent_space-between_xxsmall__1w3vbem61"
            style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
          >
            <input
              class="styles__ai2awpc styles_controls_true__ai2awpe styles_hasUnit_true__ai2awpf styles_size_medium__ai2awph"
              id="_r_3m_"
              inputmode="decimal"
              max="100"
              min="0"
              placeholder=""
              type="number"
            />
            <span
              class="styles__ai2awp5 styles_size_medium__ai2awp9 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
            >
              GB
            </span>
          </div>
          <div
            class="styles_medium__ai2awp1 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="medium"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                plus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should renders correctly all sizes > with size small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div>
        <div
          class="styles__ai2awpk styles_size_small__ai2awpn styles_state_default__ai2awpo"
          data-controls="true"
          data-disabled="false"
          data-error="false"
          data-size="small"
          data-success="false"
          data-unit="false"
        >
          <div
            class="styles_small__ai2awp2 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="small"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_xsmall__8xt08sh styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                minus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__ai2awp3 styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_justifyContent_space-between_xxsmall__1w3vbem61"
            style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
          >
            <input
              class="styles__ai2awpc styles_controls_true__ai2awpe styles_size_small__ai2awpi"
              id="_r_34_"
              inputmode="decimal"
              max="100"
              min="0"
              placeholder=""
              type="number"
            />
          </div>
          <div
            class="styles_small__ai2awp2 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="small"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_xsmall__8xt08sh styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                plus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should renders correctly all sizes > with size small and unit 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div>
        <div
          class="styles__ai2awpk styles_size_small__ai2awpn styles_state_default__ai2awpo"
          data-controls="true"
          data-disabled="false"
          data-error="false"
          data-size="small"
          data-success="false"
          data-unit="true"
        >
          <div
            class="styles_small__ai2awp2 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="small"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_xsmall__8xt08sh styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                minus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__ai2awp3 styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_justifyContent_space-between_xxsmall__1w3vbem61"
            style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
          >
            <input
              class="styles__ai2awpc styles_controls_true__ai2awpe styles_hasUnit_true__ai2awpf styles_size_small__ai2awpi"
              id="_r_40_"
              inputmode="decimal"
              max="100"
              min="0"
              placeholder=""
              type="number"
            />
            <span
              class="styles__ai2awp5 styles_size_small__ai2awpa style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
            >
              GB
            </span>
          </div>
          <div
            class="styles_small__ai2awp2 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="small"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_xsmall__8xt08sh styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                plus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should renders correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div>
        <div
          class="styles__ai2awpk styles_size_large__ai2awpl styles_state_disabled__ai2awpp"
          data-controls="true"
          data-disabled="true"
          data-error="false"
          data-size="large"
          data-success="false"
          data-unit="false"
        >
          <div
            class="styles_large__ai2awp0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="large"
          >
            <button
              class="styles__8xt08s0 styles_disabled_true__8xt08s2 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                minus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__ai2awp3 styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_justifyContent_space-between_xxsmall__1w3vbem61"
            style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
          >
            <input
              class="styles__ai2awpc styles_controls_true__ai2awpe styles_size_large__ai2awpg"
              disabled=""
              id="_r_8_"
              inputmode="decimal"
              max="9007199254740991"
              min="0"
              placeholder=""
              type="number"
            />
          </div>
          <div
            class="styles_large__ai2awp0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="large"
          >
            <button
              class="styles__8xt08s0 styles_disabled_true__8xt08s2 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                plus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should renders correctly max value 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div>
        <div
          class="styles__ai2awpk styles_size_large__ai2awpl styles_state_default__ai2awpo"
          data-controls="true"
          data-disabled="false"
          data-error="false"
          data-size="large"
          data-success="false"
          data-unit="false"
        >
          <div
            class="styles_large__ai2awp0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="large"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                minus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__ai2awp3 styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_justifyContent_space-between_xxsmall__1w3vbem61"
            style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
          >
            <input
              class="styles__ai2awpc styles_controls_true__ai2awpe styles_size_large__ai2awpg"
              id="_r_2c_"
              inputmode="decimal"
              max="100"
              min="0"
              placeholder=""
              type="number"
            />
          </div>
          <div
            class="styles_large__ai2awp0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="large"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                plus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should renders correctly min value 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div>
        <div
          class="styles__ai2awpk styles_size_large__ai2awpl styles_state_default__ai2awpo"
          data-controls="true"
          data-disabled="false"
          data-error="false"
          data-size="large"
          data-success="false"
          data-unit="false"
        >
          <div
            class="styles_large__ai2awp0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="large"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                minus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__ai2awp3 styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_justifyContent_space-between_xxsmall__1w3vbem61"
            style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
          >
            <input
              class="styles__ai2awpc styles_controls_true__ai2awpe styles_size_large__ai2awpg"
              id="_r_24_"
              inputmode="decimal"
              max="100"
              min="0"
              placeholder=""
              type="number"
            />
          </div>
          <div
            class="styles_large__ai2awp0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="large"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                plus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should renders correctly with error 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div>
        <div
          class="styles__ai2awpk styles_size_large__ai2awpl styles_state_error__ai2awpq"
          data-controls="true"
          data-disabled="false"
          data-error="true"
          data-size="large"
          data-success="false"
          data-unit="false"
        >
          <div
            class="styles_large__ai2awp0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="large"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                minus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__ai2awp3 styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_justifyContent_space-between_xxsmall__1w3vbem61"
            style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
          >
            <input
              aria-describedby="_r_19_"
              class="styles__ai2awpc styles_controls_true__ai2awpe styles_size_large__ai2awpg"
              id="_r_18_"
              inputmode="decimal"
              max="9007199254740991"
              min="0"
              placeholder=""
              type="number"
            />
          </div>
          <div
            class="styles_large__ai2awp0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="large"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                plus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <span
        class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_danger__1do42ls9 style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_48__1do42ls2m"
        id="_r_19_"
        role="status"
      >
        This is an error
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should renders correctly with label 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <label
        class="styles_htmlFor__l58dz72 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        for="_r_k_"
      >
        Label
      </label>
      <div>
        <div
          class="styles__ai2awpk styles_size_large__ai2awpl styles_state_default__ai2awpo"
          data-controls="true"
          data-disabled="false"
          data-error="false"
          data-size="large"
          data-success="false"
          data-unit="false"
        >
          <div
            class="styles_large__ai2awp0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="large"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                minus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__ai2awp3 styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_justifyContent_space-between_xxsmall__1w3vbem61"
            style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
          >
            <input
              class="styles__ai2awpc styles_controls_true__ai2awpe styles_size_large__ai2awpg"
              id="_r_k_"
              inputmode="decimal"
              max="9007199254740991"
              min="0"
              placeholder=""
              type="number"
            />
          </div>
          <div
            class="styles_large__ai2awp0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="large"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                plus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should renders correctly with label description 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div
        class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p"
      >
        <label
          class="styles_htmlFor__l58dz72 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          for="_r_u_"
        />
        <div>
          label description
        </div>
      </div>
      <div>
        <div
          class="styles__ai2awpk styles_size_large__ai2awpl styles_state_default__ai2awpo"
          data-controls="true"
          data-disabled="false"
          data-error="false"
          data-size="large"
          data-success="false"
          data-unit="false"
        >
          <div
            class="styles_large__ai2awp0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="large"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                minus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__ai2awp3 styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_justifyContent_space-between_xxsmall__1w3vbem61"
            style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
          >
            <input
              class="styles__ai2awpc styles_controls_true__ai2awpe styles_size_large__ai2awpg"
              id="_r_u_"
              inputmode="decimal"
              max="9007199254740991"
              min="0"
              placeholder=""
              type="number"
            />
          </div>
          <div
            class="styles_large__ai2awp0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="large"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                plus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should renders correctly with placeholder 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div>
        <div
          class="styles__ai2awpk styles_size_large__ai2awpl styles_state_default__ai2awpo"
          data-controls="true"
          data-disabled="false"
          data-error="false"
          data-size="large"
          data-success="false"
          data-unit="false"
        >
          <div
            class="styles_large__ai2awp0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="large"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                minus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__ai2awp3 styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_justifyContent_space-between_xxsmall__1w3vbem61"
            style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
          >
            <input
              class="styles__ai2awpc styles_controls_true__ai2awpe styles_size_large__ai2awpg"
              id="_r_1s_"
              inputmode="decimal"
              max="9007199254740991"
              min="0"
              placeholder="Enter a value here"
              type="number"
            />
          </div>
          <div
            class="styles_large__ai2awp0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="large"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                plus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should renders correctly with success 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div>
        <div
          class="styles__ai2awpk styles_size_large__ai2awpl styles_state_success__ai2awps"
          data-controls="true"
          data-disabled="false"
          data-error="false"
          data-size="large"
          data-success="true"
          data-unit="false"
        >
          <div
            class="styles_large__ai2awp0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="large"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                minus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__ai2awp3 styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_justifyContent_space-between_xxsmall__1w3vbem61"
            style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
          >
            <input
              aria-describedby="_r_1j_"
              class="styles__ai2awpc styles_controls_true__ai2awpe styles_size_large__ai2awpg"
              id="_r_1i_"
              inputmode="decimal"
              max="9007199254740991"
              min="0"
              placeholder=""
              type="number"
            />
          </div>
          <div
            class="styles_large__ai2awp0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="large"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                plus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <span
        class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_success__1do42lse style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_56__1do42ls2u"
        id="_r_1j_"
        role="status"
      >
        This is a success
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should renders correctly without controls 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div>
        <div
          class="styles__ai2awpk styles_size_large__ai2awpl styles_state_default__ai2awpo"
          data-controls="false"
          data-disabled="false"
          data-error="false"
          data-size="large"
          data-success="false"
          data-unit="false"
        >
          <div
            class="styles__ai2awp3 styles_controls_false__ai2awp4 styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_justifyContent_space-between_xxsmall__1w3vbem61"
            style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
          >
            <input
              class="styles__ai2awpc styles_controls_false__ai2awpd styles_size_large__ai2awpg styles_undefined_compound_0__ai2awpj"
              id="_r_g_"
              inputmode="decimal"
              max="9007199254740991"
              min="0"
              placeholder=""
              type="number"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should update the value on blur when it is above the max value 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div>
        <div
          class="styles__ai2awpk styles_size_large__ai2awpl styles_state_default__ai2awpo"
          data-controls="true"
          data-disabled="false"
          data-error="false"
          data-size="large"
          data-success="false"
          data-unit="false"
        >
          <div
            class="styles_large__ai2awp0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="large"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                minus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__ai2awp3 styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_justifyContent_space-between_xxsmall__1w3vbem61"
            style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
          >
            <input
              class="styles__ai2awpc styles_controls_true__ai2awpe styles_size_large__ai2awpg"
              id="_r_52_"
              inputmode="numeric"
              max="5"
              min="1"
              placeholder=""
              step="1"
              type="number"
              value="10"
            />
          </div>
          <div
            class="styles_large__ai2awp0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="large"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                plus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should update the value on blur when it is below the min value 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div>
        <div
          class="styles__ai2awpk styles_size_large__ai2awpl styles_state_default__ai2awpo"
          data-controls="true"
          data-disabled="false"
          data-error="false"
          data-size="large"
          data-success="false"
          data-unit="false"
        >
          <div
            class="styles_large__ai2awp0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="large"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                minus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__ai2awp3 styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_justifyContent_space-between_xxsmall__1w3vbem61"
            style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
          >
            <input
              class="styles__ai2awpc styles_controls_true__ai2awpe styles_size_large__ai2awpg"
              id="_r_4q_"
              inputmode="numeric"
              max="100"
              min="10"
              placeholder=""
              step="10"
              type="number"
              value="1"
            />
          </div>
          <div
            class="styles_large__ai2awp0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="large"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                plus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should update the value when clicking on the minus button 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div>
        <div
          class="styles__ai2awpk styles_size_large__ai2awpl styles_state_default__ai2awpo"
          data-controls="true"
          data-disabled="false"
          data-error="false"
          data-size="large"
          data-success="false"
          data-unit="false"
        >
          <div
            class="styles_large__ai2awp0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="large"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                minus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__ai2awp3 styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_justifyContent_space-between_xxsmall__1w3vbem61"
            style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
          >
            <input
              class="styles__ai2awpc styles_controls_true__ai2awpe styles_size_large__ai2awpg"
              id="_r_4a_"
              inputmode="numeric"
              max="100"
              min="0"
              placeholder=""
              step="1"
              type="number"
              value="10"
            />
          </div>
          <div
            class="styles_large__ai2awp0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="large"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                plus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should update the value when clicking on the plus button 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div>
        <div
          class="styles__ai2awpk styles_size_large__ai2awpl styles_state_default__ai2awpo"
          data-controls="true"
          data-disabled="false"
          data-error="false"
          data-size="large"
          data-success="false"
          data-unit="false"
        >
          <div
            class="styles_large__ai2awp0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="large"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                minus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__ai2awp3 styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_justifyContent_space-between_xxsmall__1w3vbem61"
            style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
          >
            <input
              class="styles__ai2awpc styles_controls_true__ai2awpe styles_size_large__ai2awpg"
              id="_r_4i_"
              inputmode="numeric"
              max="100"
              min="0"
              placeholder=""
              step="10"
              type="number"
            />
          </div>
          <div
            class="styles_large__ai2awp0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            data-size="large"
          >
            <button
              class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
              tabindex="-1"
              type="button"
            >
              <span
                class="styles__ahdbou0"
              >
                plus
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
